--- a/package.json
+++ b/package.json
@@ -46,9 +46,11 @@
     "react-beautiful-dnd": "^10.0.2",
     "react-dev-utils": "^6.1.1",
     "react-dom": "^16.6.3",
+    "react-loader-spinner": "^2.3.0",
     "react-redux": "^5.1.1",
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
+    "react-toastify": "^4.5.2",
     "resolve": "1.8.1",
     "sass-loader": "7.1.0",
     "style-loader": "0.23.0",
